--- a/Templates/gastos.html
+++ b/Templates/gastos.html
@@ -9,13 +9,8 @@
 <body>
     <heading> 
         <h1>Gestor Financiero</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="Login.html">Mis gastos</a></li>
-                <li><a href="Login.html">Mis Ingresos</a></li>
-            </ul>
-        </nav>
+        <br>
+        {% include 'blocks/barra_navegacion.html' %}
     </heading>
     <main> 
         <h2>Gastos</h2>
