--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
     <title>Gestor Financiero</title>
 </head>
 <body>
@@ -50,9 +51,7 @@
     </main>
     <br>
     <footer>
-
         ©️ Gestor de Finanzas by Juan Diego Pineda Garcia - Kevin Andres Fuentes Lopez
-        
     </footer>
 </body>
 </html>
