--- a/Templates/ingresos.html
+++ b/Templates/ingresos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Estilos/ingresos.css" ref = "stylesheet" type = "text/css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
     <title>Gestor Financiero</title>
 </head>
 <body>
@@ -13,20 +14,10 @@
         {% include 'blocks/barra_navegacion.html' %}
     </heading>
     <main>
-        <form> 
-            <label for="">Nombre</label>
-                <input type="text">
-                <label for="">Fecha</label>
-                <input type="date">
-                <label for="">Cantidad</label>
-                <input type="number">
-                <label for="">Descripcion</label>
-                <input type="text">
-                <input type="submit" value="Agregar">
-        </form>
+        
     </main>
     <footer>
-        
+        ©️ Gestor de Finanzas by Juan Diego Pineda Garcia - Kevin Andres Fuentes Lopez
     </footer>
 </body>
 </html>
