--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,42 +11,25 @@
         <h1>Gestor Financiero</h1>
     </heading>
     <br>
-    <main> 
-        <h2>Bienvenido!</h2>
-
+    <main>
         {% include 'blocks/barra_navegacion.html' %}
-
         <br>
-        <table name = "Presentacion">
-            <tr>
-                <th>ID</th>
-                <th>Año</th>
-                <th>Mes</th>
-                <th>Ingresos Totales</th>
-                <th>Gastos Totales</th>
-                <th>Dinero Restante</th>
-            </tr>
-            <tr>
-                <td>
-                1
-                </td>
-                <td>
-                1    
-                </td>
-                <td>
-                2
-                </td>
-                <td>
-                3
-                </td>
-                <td>
-                4
-                </td>
-                <td>
-                5
-                </td>
-            </tr>
-        </table>
+        <h2>Bienvenido!</h2>  
+        <br>  
+            <table>
+                <tr>
+                    <th>Ingresos Totales</th>
+                    <th>Gastos Totales</th>
+                    <th>Dinero Restante</th>
+                    <th>Fecha</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+            </table>
         <br>
     </main>
     <br>
