--- a/Templates/blocks/Crud_Gastos/actualizar.html
+++ b/Templates/blocks/Crud_Gastos/actualizar.html
@@ -9,15 +9,14 @@
     <input type="text">
     <label for="">Categoria</label>
     <select name="TipGasto" id="TipGasto">
-        <option value="">Transferencia o Retiro</option>
-        <option value="">Prestamos</option>
-        <option value="">Compras</option>
-        <option value="">Renta</option>
-        <option value="">Deuda</option>
-        <option value="">Servicios</option>
-        <option value="">Entretenimiento</option>
-        <option value="">Transporte</option>
-        <option value="">05/2024</option>
+        <option value="Transferencia o Retiro">Transferencia o Retiro</option>
+        <option value="Prestamos">Prestamos</option>
+        <option value="Compras">Compras</option>
+        <option value="Renta">Renta</option>
+        <option value="Deuda">Deuda</option>
+        <option value="Servicios">Servicios</option>
+        <option value="Entretenimiento">Entretenimiento</option>
+        <option value="Transporte">Transporte</option>
     </select>
     <input type="submit" value="Agregar">
 </form>
