--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
     <title>Gestor Financiero</title>
 </head>
 <body>
-    <heading> 
+    <heading > 
         <h1>Gestor Financiero</h1>
     </heading>
     <br>
-    <main>
+    <main class="nav">
+        <div class="navbar navbar-expand-lg navbar-light bg-light">
         {% include 'blocks/barra_navegacion.html' %}
         <br>
         <h2>Bienvenido!</h2>  
@@ -31,6 +33,8 @@
                 </tr>
             </table>
         <br>
+            
+        </div>
     </main>
     <br>
     <footer>
