--- a/Templates/ingresos.html
+++ b/Templates/ingresos.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/ingresos.css')}}">
+
     <title>Gestor Financiero</title>
 </head>
 <body>
