--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
     <title>Gestor Financiero</title>
 </head>
@@ -12,8 +12,7 @@
         <h1>Gestor Financiero</h1>
     </heading>
     <br>
-    <main class="nav">
-        <div class="navbar navbar-expand-lg navbar-light bg-light">
+    <main>
         {% include 'blocks/barra_navegacion.html' %}
         <br>
         <h2>Bienvenido!</h2>  
@@ -34,7 +33,6 @@
             </table>
         <br>
             
-        </div>
     </main>
     <br>
     <footer>
