estilo inicial de los botones

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/Styles.css')}}">
     <title>Gestor Financiero</title>
 </head>
 <body>
@@ -24,10 +24,10 @@
                     <th>Fecha</th>
                 </tr>
                 <tr>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
+                    <td><input placeholder="Ingresos Totales" class="input" type="text" /></td>
+                    <td><input placeholder="Gastos Totales" class="input" type="text" /></td>
+                    <td><input placeholder="Dinero Restante" class="input" type="text" /></td>
+                    <td><input placeholder="Fecha" class="input" type="text" /></td>
                 </tr>
             </table>
         <br>
