--- a/Templates/ingresos.html
+++ b/Templates/ingresos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/ingresos.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/Styles.css')}}">
     <title>Gestor Financiero</title>
 </head>
 <body>
@@ -23,12 +23,12 @@
             <tr>
                 <th>Fuente de Ingreso</th>
                 <th>Valor</th>
-                <th>fecha</th>
+                <th>Fecha</th>
             </tr>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
+                <td><input placeholder="Descripcion" class="input" type="text" /></td>
+                <td><input placeholder="$$$$$$$$$" class="input" type="text" /></td>
+                <td><input placeholder="DD/MM/AAAA" class="input" type="text" /></td>
             </tr>
         </table>
         <br>
