--- a/Templates/gastos.html
+++ b/Templates/gastos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/gastos.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/Styles.css')}}">
     <title>Gestor Financiero</title>
 
 </head>
@@ -28,10 +28,10 @@
                 <th>Categoria</th>
             </tr>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
+                <td><input placeholder="Origen" class="input" type="text" /></td>
+                <td><input placeholder="$$$$$$$$$" class="input" type="text" /></td>
+                <td><input placeholder="Fecha" class="input" type="text" /></td>
+                <td><input placeholder="Categoria" class="input" type="text" /></td>
             </tr>
         </table>
         <br>
