actualizacion html e inclusion base de datos mysql

--- a/Templates/gastos.html
+++ b/Templates/gastos.html
@@ -17,23 +17,31 @@
         <br>
         <h2>Gastos</h2>
         <br>
-        <button>Crear</button>
+        <button> Crear </button>
         <br>
         <br>
+
         <table>
-            <tr>
-                <th>Origen del Gasto</th>
-                <th>Valor</th>
-                <th>Fecha</th>
-                <th>Categoria</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Origen del Gasto</th>
+                    <th>Valor</th>
+                    <th>Fecha</th>
+                    <th>Categoria</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for  in  %}
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
         </table>
+
         <br>
         <button>siguiente</button>
     </main>
