--- a/Templates/ingresos.html
+++ b/Templates/ingresos.html
@@ -16,20 +16,26 @@
         <br>
         <h2>Ingresos</h2>
         <br>
-        <button>Crear</button>
+        <button id = "crear">Crear</button>
         <br>
         <br>
         <table>
-            <tr>
-                <th>Fuente de Ingreso</th>
-                <th>Valor</th>
-                <th>fecha</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Fuente de Ingreso</th>
+                    <th>Valor</th>
+                    <th>fecha</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for  in  %}
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
         </table>
         <br>
         <button>Sigiuente</button>
