--- a/Templates/blocks/Crud_Ingresos/crear.html
+++ b/Templates/blocks/Crud_Ingresos/crear.html
@@ -1,11 +1,9 @@
-<form action="">
+<form action="/Ingresos/Crear" method = "post">
     <label for="">Fuente del Ingreso</label>
-    <input type="text">
-    <label for="">Fecha</label>
-    <input type="date">
+    <input placeholder="Fuente de dinero" type="text" name = "fuente_ingresos">
     <label for="">Valor</label>
-    <input type="number">
-    <label for="">Descripcion</label>
-    <input type="text">
+    <input type="number" placeholder="Cantidad de dinero" name = "valor_ingresos">
+    <label for="">Fecha</label>
+    <input type="date" name = "fecha_ingresos">
     <input type="submit" value="Agregar">
 </form> 
