--- a/Templates/ingresos.html
+++ b/Templates/ingresos.html
@@ -16,29 +16,32 @@
         <br>
         <h2>Ingresos</h2>
         <br>
-        <button id = "crear">Crear</button>
+        <button><a href="{{url_for('crear_ingresos')}}"> Crear </a></button>
         <br>
         <br>
         <table>
             <thead>
                 <tr>
+                    <th>Codigo</th>
                     <th>Fuente de Ingreso</th>
                     <th>Valor</th>
                     <th>fecha</th>
                 </tr>
             </thead>
             <tbody>
-                {% for  in  %}
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
+                {% for key in keys%}
+                <tr>
+                    <td>{{key}}</td>
+                    <td>{{ ingre[loop.index0].fuente_ingreso }}</td>
+                    <td>{{ ingre[loop.index0].valor_ingreso }}</td>
+                    <td>{{ ingre[loop.index0].fecha_ingreso }}</td>
+                    <td><a href="{{url_for('actualizar_ingresos', codigo = key )}}">editar</a>
+                        <a href="{{url_for('eliminar_ingresos', codigo = key )}}">eliminar</a></td>
+                </tr>
                 {% endfor %}
             </tbody>
         </table>
         <br>
-        <button>Sigiuente</button>
     </main>
     <br>
     <footer>
