--- a/Templates/blocks/barra_navegacion.html
+++ b/Templates/blocks/barra_navegacion.html
@@ -1,7 +1,7 @@
-<nav>
-    <ul>
-        <li><a href={{url_for('raiz')}}>Inicio</a></li>
-        <li><a href={{url_for('gastos')}}>Mis gastos</a></li>
-        <li><a href={{url_for('ingresos')}}>Mis Ingresos</a></li>
-    </ul>
-</nav>
+<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+    
+        <a href={{url_for('raiz')}}>Inicio</a>
+        <a href={{url_for('gastos')}}>Mis gastos</a>
+        <a href={{url_for('ingresos')}}>Mis Ingresos</a>
+    
+  </nav>
