--- a/Templates/ingresos.html
+++ b/Templates/ingresos.html
@@ -7,6 +7,7 @@
     <title>Gestor Financiero</title>
 </head>
 <body>
+    <div class="container">
     <heading> 
         <h1>Gestor Financiero</h1>
         <br>
@@ -14,9 +15,9 @@
     </heading>
     <main>
         <br>
-        <h2>Ingresos</h2>
+        <h2 class="Ingresos" >Ingresos</h2>
         <br>
-        <button>Crear</button>
+        <button class="boton">Crear</button>
         <br>
         <br>
         <table>
@@ -32,12 +33,13 @@
             </tr>
         </table>
         <br>
-        <button>Sigiuente</button>
+        <button class="boton">Sigiuente</button>
     </main>
     <br>
     <footer>
         
         ©️ Gestor de Finanzas by Juan Diego Pineda Garcia - Kevin Andres Fuentes Lopez
     </footer>
+</div>
 </body>
 </html>
