se revirtio a la version c562a23d7405975cb791383ab18c7821ac7ba50f

--- a/Templates/blocks/barra_navegacion.html
+++ b/Templates/blocks/barra_navegacion.html
@@ -1,7 +1,7 @@
-<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-    
-        <a href={{url_for('raiz')}}>Inicio</a>
-        <a href={{url_for('gastos')}}>Mis gastos</a>
-        <a href={{url_for('ingresos')}}>Mis Ingresos</a>
-    
-  </nav>
+<nav>
+    <ul>
+        <li><a href={{url_for('raiz')}}>Inicio</a></li>
+        <li><a href={{url_for('gastos')}}>Mis gastos</a></li>
+        <li><a href={{url_for('ingresos')}}>Mis Ingresos</a></li>
+    </ul>
+</nav>
