--- a/Templates/gastos.html
+++ b/Templates/gastos.html
@@ -8,7 +8,6 @@
 
 </head>
 <body>
-    <div class="container">  
     <heading> 
         <h1>Gestor Financiero</h1>
         <br>
@@ -16,10 +15,7 @@
     </heading>
     <main>
         <br>
-        <div class="imggastos">
-        <h2 class="Gastos">Gastos</h2>
-        <img src=> #poner ruta de la imagen descargada y buscar como ubicarla al lado del titulo
-        </div>
+        <h2>Gastos</h2>
         <br>
         <button><a href="{{url_for('crear_gastos')}}"> Crear </a></button>
 
@@ -65,7 +61,7 @@
             <tr>
                 <td><input placeholder="Origen" class="input" type="text" /></td>
                 <td><input placeholder="$$$$$$$$$" class="input" type="text" /></td>
-                <td><input placeholder="DD/MM/AAAA" class="input" type="text" /></td>
+                <td><input placeholder="Fecha" class="input" type="text" /></td>
                 <td><input placeholder="Categoria" class="input" type="text" /></td>
             </tr>
         </table>
@@ -77,6 +73,5 @@
     <footer>
         ©️ Gestor de Finanzas by Juan Diego Pineda Garcia - Kevin Andres Fuentes Lopez
     </footer>
-</div>
 </body>
 </html>
