--- a/Templates/ingresos.html
+++ b/Templates/ingresos.html
@@ -7,7 +7,6 @@
     <title>Gestor Financiero</title>
 </head>
 <body>
-    <div class="container">
     <heading> 
         <h1>Gestor Financiero</h1>
         <br>
@@ -15,7 +14,7 @@
     </heading>
     <main>
         <br>
-        <h2 class="Ingresos" >Ingresos</h2>
+        <h2>Ingresos</h2>
         <br>
         <button><a href="{{url_for('crear_ingresos')}}"> Crear </a></button>
 
@@ -56,6 +55,5 @@
         
         ©️ Gestor de Finanzas by Juan Diego Pineda Garcia - Kevin Andres Fuentes Lopez
     </footer>
-</div>
 </body>
 </html>
