--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='css/Styles.css')}}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Gestor Financiero</title>
 </head>
 <body>
-
-    <div class="container">
     <heading > 
         <h1>Gestor Financiero</h1>
     </heading>
@@ -17,7 +14,7 @@
     <main>
         {% include 'blocks/barra_navegacion.html' %}
         <br>
-        <h2 class="Titulo">¡BIENVENIDO!</h2>  
+        <h2>Bienvenido!</h2>  
         <br>  
 
             <table>
@@ -49,13 +46,11 @@
                     <th>Dinero Restante</th>
                     <th>Fecha</th>
                 </tr>
-            </thead> 
-            <tbody>
                 <tr>
-                    <td placeholder="Ingresos Totales" class="input" type="text"/></td>
-                    <td placeholder="Gastos Totales" class="input" type="text" /></td>
-                    <td placeholder="Dinero Restante" class="input" type="text" /></td>
-                    <td placeholder="Fecha" class="input" type="text" /></td>
+                    <td><input placeholder="Ingresos Totales" class="input" type="text" /></td>
+                    <td><input placeholder="Gastos Totales" class="input" type="text" /></td>
+                    <td><input placeholder="Dinero Restante" class="input" type="text" /></td>
+                    <td><input placeholder="Fecha" class="input" type="text" /></td>
                 </tr>
             </tbody>
               </table>
@@ -67,7 +62,5 @@
     <footer>
         ©️ Gestor de Finanzas by Juan Diego Pineda Garcia - Kevin Andres Fuentes Lopez
     </footer>
-</div>
 </body>
-
 </html>
